--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>A page from SUN</title>
 </head>
 <body>
-  <h1>你好nihao</h1>
-  <h2>今天是2023年10月29日</h2>
-  <h3>dfg dsafa sdfg asdg asdg </h3>
-  <h3>今天学习了一些基础知识，还不错</h3>
+  <h1>Hello~</h1>
+  <h2>今天是<strong>2023年10月29日</strong></h2>
 </body>
 </html>
